# grokking-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/agents/: faraday.md  minerva.md
results/mlp/: README.md
results/mlp/assets/: grokking_summary.json
runs/seed/20260122_095242/: metrics.jsonl
runs/train_frac/20260121_082404/: metrics.jsonl
runs/train_frac/20260121_092213/: config.yaml
runs/train_frac/20260121_094638/: metrics.jsonl
runs/train_frac/20260122_065110/: checkpoint.pt  config.yaml  metrics.jsonl
runs/train_frac/20260122_073903/: checkpoint.pt  config.yaml  metrics.jsonl
runs/train_frac/20260122_085304/: checkpoint.pt  metrics.jsonl
runs/train_frac/20260122_200706/: metrics.jsonl
src/: paths.py
src/mlp/: README.md  configs.py  main.py  notebook.ipynb
src/transformer/: README.md  configs.py  experiments.ipynb  main.py  model.py  progress_measure.py  progress_measures.ipynb
src/transformer/analysis/: fft_embedding.py
src/transformer/configs/: base.yaml  one_layer.yaml
src/transformer_progress_measures/: README.md  __init__.py  configs.py  fft_embedding.py  main.py  model.py
src/transformer_progress_measures/analysis/: fft_embedding.py  figure4.py  run_analysis.sh  utils.py
src/transformer_progress_measures/configs/: base.yaml  one_layer_paper_like_min.yaml
src/transformer_progress_measures_ablation/: README.md  __init__.py  configs.py  main.py  model.py
tests/unit/: conftest.py
tmp/: plot_loss_accuracy_curves.py  plot_train_frac_vs_grok_step.py  train_frac_vs_grokking_step.csv
(+218 files in other folders)
