[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "grokking-lab"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "torch",
    "torchvision",
    "pytest",
    "PyYAML",
    "typer",
    "ipykernel>=6.29.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-s"  # pytest 不捕获 stdout/stderr
